A new Project was Added to Portfolio

--- a/web.css
+++ b/web.css
@@ -186,34 +186,24 @@
             position: relative;
             overflow: hidden;
         }
-        .disabled{
+        /* .disabled{
             opacity: 0.5;
-            /* pointer-events: none; */
             cursor: not-allowed;
-        }
+        } */
         #Tic{
-           background: linear-gradient(135deg, #b045e9, #9c27b0);
+           background: linear-gradient(105deg, #b045e9 0%, #220627 70%);
         }
         #Rock {
-            background: linear-gradient(135deg, #66fa48, #4caf50);
+            background: linear-gradient(105deg, #66fa48 0% , #3704f0 100% );
+        }
+        #Quiz{
+        background: linear-gradient(105deg, #a42366 0%, #c16012 100%);
         }
         #Calculator {
-            background: linear-gradient(135deg, #48bcfa, #4cafa8);
+            background: linear-gradient(109deg, #0a3953 0% , #15dccf 80% );
         }
         #Typing{
-            background: linear-gradient(135deg, #f8df22, #94821c);
-        }
-          #Calculator.disabled{
-            opacity: 0.5;
-            background: linear-gradient(135deg, #0f0f0f, #eaeaea);
-            cursor: not-allowed;
-            pointer-events: none;
-        }
-        #Typing.disabled{
-            opacity: 0.5;
-            background: linear-gradient(135deg, #0f0f0f, #eaeaea);
-            cursor: not-allowed;
-            pointer-events: none;
+            background: linear-gradient(105deg, #574d08 0% , #94821c 100% );
         }
 
         .project-card::before {
@@ -283,19 +273,19 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         }
 
-        .coming-soon {
+        /* .coming-soon {
             background: linear-gradient(135deg, #6c757d, #495057);
             opacity: 0.7;
             cursor: not-allowed;
-        }
+        } */
 
-        .coming-soon h3 {
+        /* .coming-soon h3 {
             color: #adb5bd;
         }
 
         .coming-soon p {
             color: #6c757d;
-        }
+        } */
 
         #foot {
             background: linear-gradient(135deg, #1a6937, #2e7d32);
