--- a/CEE/CEE_Quiz/templates/full_test.html
+++ b/CEE/CEE_Quiz/templates/full_test.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/full_test.css' %}">
+    <link rel="icon" href="{% static 'images/favicon.png'}" type="image/png">
     <title>Full Test</title>
 </head>
 
