--- a/CEE/CEE_Quiz/templates/home.html
+++ b/CEE/CEE_Quiz/templates/home.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>CEE Quiz Home</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="icon" href="{% static 'images/favicon.png'}" type="image/png">
 </head>
 
 <body>
