--- a/CEE/CEE_Quiz/templates/quiz.html
+++ b/CEE/CEE_Quiz/templates/quiz.html
@@ -88,6 +88,7 @@
                 <span class="stat-value">{{ score }} / {{ total_questions }}</span>
             </div>
         </div>
+        <p class="negative-marking-note">* Negative marking of 0.25 applied per wrong answer</p>
     </div>
 {% endif %}
                 {% endif %}
